--- a/app/views/pastas/index.html.erb
+++ b/app/views/pastas/index.html.erb
@@ -14,9 +14,9 @@
       <tr>
         <td><%= pasta.title %></td>
         <td><%= pasta.body %></td>
-        <td><%= link_to 'Show', pasta %></td>
+        <td><%= link_to 'Show', pasta_path(pasta) %></td>
         <td><%= link_to 'Edit', edit_pasta_path(pasta) %></td>
-        <td><%= link_to 'Destroy', pasta,method: :delete, data:{confirm:'Are you sure?'}%></td>
+        <td><%= link_to 'Destroy', pasta_path(pasta),method: :delete, data:{confirm:'Are you sure?'}%></td>
       </tr>
     <% end %>
   </tbody>
